Fixed overflow-x

--- a/cryptoticker/css/style.css
+++ b/cryptoticker/css/style.css
@@ -9,6 +9,7 @@ body, html {
 	font-weight: 300;
 	width: 100vw !important;
 	height: 100vh !important;
+	overflow-x:hidden;
 }
 h2 {
 	margin: 0 0 20px 0;
